--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -10,18 +10,25 @@ jobs:
         include:
           - os: ubuntu-latest
             arch: x86_64
+            cmake-arch: -m64
           - os: ubuntu-latest
             arch: arm64
+            cmake-arch: -march=armv8-a
           - os: windows-latest
             arch: x86_64
+            cmake-arch: x64
           - os: windows-latest
             arch: x86
+            cmake-arch: Win32
           - os: windows-latest
             arch: arm64
+            cmake-arch: ARM64
           - os: macos-latest
             arch: x86_64
+            cmake-arch: x86_64
           - os: macos-latest
             arch: arm64
+            cmake-arch: arm64
     steps:
     - uses: actions/checkout@v4.1.7
       with:
@@ -36,13 +43,27 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y build-essential cmake
 
-    - name: Configure box2d with CMake for macOS ARM64
-      if: matrix.arch == 'arm64' && matrix.os == 'macos-latest'
-      run: cmake -S box2d -B box2d/build -DCMAKE_OSX_ARCHITECTURES=arm64
+    - name: Install cross-compilation toolchain for ARM64 on Ubuntu
+      if: matrix.os == 'ubuntu-latest' && matrix.arch == 'arm64'
+      run: |
+        sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
 
-    - name: Configure box2d with CMake
-      if: matrix.arch != 'arm64' || matrix.os != 'macos-latest'
-      run: cmake -S box2d -B box2d/build  -DBOX2D_SAMPLES=OFF -DBOX2D_UNIT_TESTS=OFF -DBOX2D_VALIDATE=OFF -DBUILD_SHARED_LIBS=ON
+    - name: Configure box2d with CMake for Windows
+      if: matrix.os == 'windows-latest'
+      run: cmake -S box2d -B box2d/build -A ${{ matrix.cmake-arch }} -DBOX2D_SAMPLES=OFF -DBOX2D_UNIT_TESTS=OFF -DBOX2D_VALIDATE=OFF -DBUILD_SHARED_LIBS=ON
+
+    - name: Configure box2d with CMake for Ubuntu x86_64
+      if: matrix.os == 'ubuntu-latest' && matrix.arch == 'x86_64'
+      run: cmake -S box2d -B box2d/build -DCMAKE_C_FLAGS="${{ matrix.cmake-arch }}" -DCMAKE_CXX_FLAGS="${{ matrix.cmake-arch }}" -DBOX2D_SAMPLES=OFF -DBOX2D_UNIT_TESTS=OFF -DBOX2D_VALIDATE=OFF -DBUILD_SHARED_LIBS=ON
+
+    - name: Configure box2d with CMake for Ubuntu ARM64
+      if: matrix.os == 'ubuntu-latest' && matrix.arch == 'arm64'
+      run: cmake -S box2d -B box2d/build -DCMAKE_C_COMPILER=aarch64-linux-gnu-gcc -DCMAKE_CXX_COMPILER=aarch64-linux-gnu-g++ -DCMAKE_C_FLAGS="${{ matrix.cmake-arch }}" -DCMAKE_CXX_FLAGS="${{ matrix.cmake-arch }}" -DBOX2D_SAMPLES=OFF -DBOX2D_UNIT_TESTS=OFF -DBOX2D_VALIDATE=OFF -DBUILD_SHARED_LIBS=ON
+
+    - name: Configure box2d with CMake for macOS
+      if: matrix.os == 'macos-latest'
+      run: cmake -S box2d -B box2d/build -DCMAKE_OSX_ARCHITECTURES=${{ matrix.cmake-arch }} -DBOX2D_SAMPLES=OFF -DBOX2D_UNIT_TESTS=OFF -DBOX2D_VALIDATE=OFF -DBUILD_SHARED_LIBS=ON
+
 
     - name: Build box2d
       run: cmake --build box2d/build --config Release
