--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -19,13 +19,6 @@ jobs:
           - os: windows-latest
             arch: x86_64
             cmake-arch: x64
-            avx2: ON
-            smid: ON
-          - os: windows-latest
-            arch: arm64
-            cmake-arch: ARM64
-            avx2: OFF
-            smid: OFF
           - os: macos-latest
             arch: x86_64
             cmake-arch: x86_64
@@ -55,7 +48,7 @@ jobs:
 
     - name: Configure Box2D with CMake for Windows
       if: matrix.os == 'windows-latest'
-      run: cmake -S box2d -B box2d/build -A ${{ matrix.cmake-arch }} -DBOX2D_SAMPLES=OFF -DBOX2D_UNIT_TESTS=OFF -DBOX2D_VALIDATE=OFF -DBUILD_SHARED_LIBS=ON -DBOX2D_AVX2=${{ matrix.avx2 }} -DBOX2D_ENABLE_SIMD=${{ matrix.smid }}
+      run: cmake -S box2d -B box2d/build -A ${{ matrix.cmake-arch }} -DBOX2D_SAMPLES=OFF -DBOX2D_UNIT_TESTS=OFF -DBOX2D_VALIDATE=OFF -DBUILD_SHARED_LIBS=ON
 
     - name: Configure Box2D with CMake for Ubuntu x86_64
       if: matrix.os == 'ubuntu-latest' && matrix.arch == 'x86_64'
