--- a/Generator/Generator.csproj
+++ b/Generator/Generator.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="HexaGen" Version="1.1.4" />
+		<PackageReference Include="HexaGen" Version="1.1.15-rc18" />
 	</ItemGroup>
 	<ItemGroup>
 	  <None Update="generator.json">
