--- a/Hexa.NET.Box2D/Hexa.NET.Box2D.csproj
+++ b/Hexa.NET.Box2D/Hexa.NET.Box2D.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net8.0;net7.0;netstandard2.1;netstandard2.0</TargetFrameworks>
+		<TargetFrameworks>net9.0;net8.0;net7.0;net6.0;netstandard2.1;netstandard2.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -10,7 +10,7 @@
 
 		<PackageId>Hexa.NET.Box2D</PackageId>
 		<AssemblyVersion>1.11.0</AssemblyVersion>
-		<PackageVersion>1.0.0</PackageVersion>
+		<PackageVersion>1.0.1</PackageVersion>
 		<Description>A .NET Wrapper for Box2D (v 3.0.0), generated with the HexaGen code generator. HexaGen allows users to access native libraries easily and with high performance.</Description>
 		<PackageTags>Box2D physics 2D Hexa HexaGen Source Generator C# .NET DotNet Sharp Windows macOS Android Bindings Wrapper Native</PackageTags>
 		<Authors>Juna Meinhold</Authors>
@@ -26,7 +26,7 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="HexaGen.Runtime" Version="1.1.8" />
+		<PackageReference Include="HexaGen.Runtime" Version="1.1.16" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -35,43 +35,43 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<!--<None Include="native\android-x64\libbox2d.so">
+		<!--<None Include="native\android-x64\*.so">
 			<Link>runtimes\android-x64\native\%(RecursiveDir)%(Filename)%(Extension)</Link>
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 			<PackagePath>runtimes/android-x64/native</PackagePath>
 			<Pack>true</Pack>
 		</None>
-		<None Include="native\android-arm64\libbox2d.so">
+		<None Include="native\android-arm64\*.so">
 			<Link>runtimes\android-arm64\native\%(RecursiveDir)%(Filename)%(Extension)</Link>
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 			<PackagePath>runtimes/android-arm64/native</PackagePath>
 			<Pack>true</Pack>
 		</None>-->
-		<None Include="native\osx-arm64\libbox2d.dylib">
+		<None Include="native\osx-arm64\*.dylib">
 			<Link>runtimes\osx-arm64\native\%(RecursiveDir)%(Filename)%(Extension)</Link>
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 			<PackagePath>runtimes/osx-arm64/native</PackagePath>
 			<Pack>true</Pack>
 		</None>
-		<None Include="native\osx-x64\libbox2d.dylib">
+		<None Include="native\osx-x64\*.dylib">
 			<Link>runtimes\osx-x64\native\%(RecursiveDir)%(Filename)%(Extension)</Link>
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 			<PackagePath>runtimes/osx-x64/native</PackagePath>
 			<Pack>true</Pack>
 		</None>
-		<None Include="native\linux-arm64\libbox2d.so">
+		<None Include="native\linux-arm64\*.so">
 			<Link>runtimes\linux-arm64\native\%(RecursiveDir)%(Filename)%(Extension)</Link>
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 			<PackagePath>runtimes/linux-arm64/native</PackagePath>
 			<Pack>true</Pack>
 		</None>
-		<None Include="native\linux-x64\libbox2d.so">
+		<None Include="native\linux-x64\*.so">
 			<Link>runtimes\linux-x64\native\%(RecursiveDir)%(Filename)%(Extension)</Link>
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 			<PackagePath>runtimes/linux-x64/native</PackagePath>
 			<Pack>true</Pack>
 		</None>
-		<None Include="native\win-x64\box2d.dll">
+		<None Include="native\win-x64\*.dll">
 			<Link>runtimes\win-x64\native\%(RecursiveDir)%(Filename)%(Extension)</Link>
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 			<PackagePath>runtimes/win-x64/native</PackagePath>
